deployments/fastapi-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <CONTAINER_NAME>
  namespace: kube-ops

spec:
  selector:
    matchLabels:
      app: <CONTAINER_NAME>
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: <CONTAINER_NAME>
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - ipt-k8s-node4
      containers:
      - name: <CONTAINER_NAME>
        image: <CI_REGISTRY_IMAGE>
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
        - name: storage
          mountPath: /usr/src/storage
          readOnly: false
        - name: tmp
          mountPath: /usr/src/tmp
          readOnly: false
        - name: ftp-mount
          mountPath: /mnt
          readOnly: true
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Shanghai
        - name: storage
          hostPath:
            path: <MOUNT_PATH_1>
        - name: tmp
          hostPath:
            path: <MOUNT_PATH_2>
        - name: ftp-mount
          hostPath:
            path: /mnt
      terminationGracePeriodSeconds: 20

---

apiVersion: v1
kind: Service
metadata:
  name: <CONTAINER_NAME>
  namespace: kube-ops
  labels:
    app: <CONTAINER_NAME>

spec:
  type: NodePort
  ports:
  - port: <MOUNT_PORT>
    targetPort: 8000
    protocol: TCP
  selector:
    app: <CONTAINER_NAME>

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: <CONTAINER_NAME>-ingress
  namespace: kube-ops
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/send_timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: "1024m"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: <CONTAINER_NAME>.cloudnative.ies.inventec
    http:
      paths:
      - backend:
          serviceName: <CONTAINER_NAME>
          servicePort: <MOUNT_PORT>
